# mdview

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODO.md  build.rs  debug_output.txt
.github/workflows/: release.yaml
src/: app.rs  cli.rs  config.rs  context_menu.rs  file_watcher.rs  font.rs  image_loader.rs  main.rs  selection.rs  update.rs  viewport.rs  windows_console.rs
src/markdown/: cache.rs  highlight.rs  mod.rs  parser.rs  renderer.rs
src/markdown/parser/: blocks.rs  inlines.rs  mod.rs  tables.rs  types.rs
src/markdown/renderer/: blocks.rs  estimate.rs  inlines.rs  mod.rs  table.rs
src/theme/: mod.rs  presets.rs
src/widgets/: mod.rs
