[package]
name = "mdview"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast, ultra-lightweight Markdown reader"
license = "MIT"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["glow", "persistence"] }
egui = "0.31"
comrak = { version = "0.39", default-features = false, features = ["shortcodes"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
open = "5"
arboard = "3"
ureq = { version = "3", default-features = false, features = ["rustls"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
dirs = "5"
tracing = "0.1"
rfd = "0.15"
fontdb = "0.23"
toml = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
